[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/block.png" type="Texture" id=1]
[ext_resource path="res://src/entities/EntityMetaLevel.gd" type="Script" id=2]
[ext_resource path="res://assets/font/monogram.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/gui/ScreenTransition.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="EntityMetaLevel" type="Area2D"]
script = ExtResource( 2 )
metaType = 5
TransitionScene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -19.0
margin_top = -7.0
margin_right = 21.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_EntityMetaLevel_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_EntityMetaLevel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EntityMetaLevel_mouse_exited"]
